java-app-todo-mysql/kubernetes/statefulset-mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: mysql-statefulset
spec:
    selector:
        matchLabels:
            app: mysql-statefulset
    serviceName: mysql-statefulset
    replicas: 1
    template:
        metadata:
            labels:
                app: mysql-statefulset
        spec:
            containers:
            - name: mysql
              image: mysql
              ports:
              - containerPort: 3306
              resources:
                requests:
                  memory: 0.5G
                  cpu: 100m
                limits:
                  memory: 1G
                  cpu: 200m
              livenessProbe:
                  tcpSocket:
                    port: 3306
                  initialDelaySeconds: 60
                  periodSeconds: 10
                  failureThreshold: 3
              readinessProbe:
                  tcpSocket:
                    port: 3306
                  periodSeconds: 10
              volumeMounts:
              - name: data
                mountPath: /var/lib/mysql
    volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 3Gi
