java-app-todo-mysql/kubernetes/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: javaapp
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "8080"
spec:
  type: NodePort
  selector:
    app: javaapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
