java-app-todo-mysql/kubernetes/service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ClusterIP
  selector:
    app: java-mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
